[tool.poetry]
name = "flask-example"
version = "0.1.0"
description = ""
authors = ["willk <will-ing@github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^1.1.2"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
